--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "CSV Upload and display",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
+    "prod_start": "SET NODE_ENV=production && nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nikhil Lomate",
@@ -14,7 +16,9 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "mongoose": "^7.4.3",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "node-sass": "^9.0.0"
+    "node-sass": "^9.0.0",
+    "rotating-file-stream": "^3.1.1"
   }
 }
